# bank_card_2.0

./: .gitignore  README.md  pyproject.toml
src/: masks.py  widget.py
src/processing/: operations.py
tests/: test_masks.py  test_processing.py  test_widget.py  test_widget_def_card-bank.py  test_widget_def_get_date.py
